# frappe-attachments-s3

./: .editorconfig  .gitignore  .tool-versions  Development.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: docker-compose.yml
.github/: issue_template.md
frappe_s3_attachment/: __init__.py  controller.py  custom_data_import.py  gdrive_utlis.py  hooks.py  modules.txt  pyproject.toml  s3_test.py  utility.py  utils.py
frappe_s3_attachment/attachment_settings/doctype/attachment_settings/: attachment_settings.js  attachment_settings.json  attachment_settings.py  test_attachment_settings.js  test_attachment_settings.py
frappe_s3_attachment/config/: attachment_settings.py  desktop.py  docs.py
frappe_s3_attachment/events/: file.py
frappe_s3_attachment/frappe_s3_attachment/doctype/s3_attachment_settings/: s3_attachment_settings.js  s3_attachment_settings.json  s3_attachment_settings.py  test_s3_attachment_settings.js  test_s3_attachment_settings.py
frappe_s3_attachment/frappe_s3_attachment/doctype/s3_file_attachment/: s3_file_attachment.js  s3_file_attachment.json  s3_file_attachment.py  test_s3_file_attachment.js  test_s3_file_attachment.py
frappe_s3_attachment/frappe_s3_attachment/doctype/s3_public_doctype/: s3_public_doctype.json  s3_public_doctype.py
frappe_s3_attachment/frappe_s3_attachment/doctype/s3_settings/: s3_settings.js  s3_settings.json  s3_settings.py  test_s3_settings.py
frappe_s3_attachment/monkey_patches/: __init__.py  importer.py
frappe_s3_attachment/public/js/: file.js
